--- a/.github/workflows/mainworkflowtrial.yml
+++ b/.github/workflows/mainworkflowtrial.yml
@@ -9,27 +9,34 @@ on:
        default: 'release'
 jobs:
   development-production:
-    uses: ./.github/workflows/reuseableworkflowtrail.yml
-    with:
-      configuration: ${{ inputs.configuration }}
+    runs-on : ubuntu-latest
+    steps: 
+     - name: call_message
+       uses: ./.github/workflows/reuseableworkflowtrail.yml
+       with:
+          configuration: ${{ inputs.configuration }}
   
-  status:
-     if: ${{ always() }}
+  failure_status:
      runs-on: ubuntu-latest
      needs: development-production
+     if: failure()
+     steps: 
+       - name: failure
+         run: 
+          echo "The workflow was failure."
+  success_status:
+     runs-on: ubuntu-latest
+     needs: development-production
+     if: success()
      steps: 
        - name: Success
-         if: ${{ steps.development-production.outputs.process_development == 'success' || 
-               steps.development-production.outputs.process_production == 'success'}} 
          run: 
           echo "The workflow was Success."
-       - name: failure
-         if: ${{ steps.development-production.outputs.process_development == 'failure' || 
-               steps.development-production.outputs.process_production == 'failure'}} 
+  cancelled_status:
+     runs-on: ubuntu-latest
+     needs: development-production
+     if: cancelled()
+     steps: 
+       - name: cancelled
          run: 
-          echo "The workflow was failed."
-       - name: Cancelled
-         if: ${{ steps.development-production.outputs.process_development == 'cancelled' || 
-               steps.development-production.outputs.process_production == 'cancelled'}} 
-         run: 
-          echo "The workflow was cancelled."
+          echo "The workflow was cancelled."        
